# android-build-tools

./: .gitmodules  CMakeLists.txt  README.md  cdefs.h.in  clone.sh  version.h.in
.github/workflows/: build.yml
patches/aidl/: 0001-aidl-Move-AidlConstantValue-class-definition.patch  0002-aidl-Move-attribute-before-function-definition.patch  0003-aidl-Move-explicit-specialization-outside-of-class-d.patch
patches/base/: 0001-base-Remove-directory-from-protobuf-imports.patch  0002-base-Include-missing-standard-headers.patch  0003-base-Fix-variable-initialization.patch
patches/core/: 0001-core-Workaround-clang-nullability-specifiers.patch
patches/incremental_delivery/: 0001-incremental_delivery-Add-operator-overload-explicitl.patch
patches/libbase/: 0001-libbase-Disable-__builtin_available-for-host-build.patch  0002-libbase-Mark-methods-const-explicitly.patch
patches/libziparchive/: 0001-libziparchive-Align-ZipStringOffset20-structure-size.patch
patches/native/: 0001-native-Include-missing-standard-headers.patch
patches/zopfli/: 0001-zopfli-Bump-minimum-cmake-version-for-cmake-4.patch
